--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,61 @@
 body {
-    background-color: rgb(237, 237, 237);
+    background-color: #eee;
+  }
+  
+  .form-signin {
+    max-width: 800px;
+    padding: 15px;
+    margin: 0 auto;
+  }
+  .form-signin .form-signin-heading,
+  .form-signin .checkbox {
+    margin-bottom: 10px;
+  }
+  .form-signin .checkbox {
+    font-weight: normal;
+  }
+  .form-signin .form-control {
+    position: relative;
+    height: auto;
+    -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+            box-sizing: border-box;
+    padding: 10px;
+    font-size: 16px;
+  }
+  .form-signin .form-control:focus {
+    z-index: 2;
+  }
+  .form-signin input[type="email"] {
+    margin-bottom: -1px;
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
+  }
+  .form-signin input[type="password"] {
+    margin-bottom: 10px;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+  }
+  
+
+.card {
+    display: inline-block;
+    margin: 20px 20px;
+    vertical-align: top;
+}
+
+.myCard {
+    float: left;
+    margin-right: 10px;
+}
+
+.myCardBody {
+    display: block;
+}
+
+.site-wrapper {
+    width: 1200px;
+    margin:auto;
+    padding: 20px 20px;
+
 }
